cargo-features = ["default-run"]

[package]
name = "mercury"
version = "0.1.0"
authors = ["Marko <zeratul@posteo.de>"]
default-run = "mercury"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.5"
yaml-rust = "0.4"
diesel = { version = "1.0.0", features = ["mysql", "chrono"] }
rocket = {git = "https://github.com/SergioBenitez/Rocket.git", branch="master"}
rocket_contrib = {git = "https://github.com/SergioBenitez/Rocket.git", branch="master", features = ["tera_templates"]}
rocket_codegen_next = {git = "https://github.com/SergioBenitez/Rocket.git", branch="master"}
itertools = "*"
lazy_static = "1.1.0"
reqwest = "*"
serde = "1.0.*"
serde_json = "1.0.*"
serde_derive = "1.0.*"
time = "*"
