[package]
name = "mercury"
version = "0.2.0"
authors = ["Marko <zeratul@posteo.de>"]
default-run = "mercury"
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.5"
yaml-rust = "0.4"
diesel = { version = "1.0.0", features = ["mysql", "chrono"] }
actix-web = "2.0"
actix-rt = "1.0"
actix-http = "1.0" 
actix-files = "0.2"
env_logger = "0.7.1"
itertools = "*"
lazy_static = "1.1.0"
reqwest = "0.9.*" # TODO: upgrade to 0.10
serde = "1.0.*"
serde_json = "1.0.*"
serde_derive = "1.0.*"
time = "*"
tera = "0.*" # TODO: upgrade to 1.0
